// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Events reducer RECEIVE_CMS_DATA action decodes events 1`] = `
Array [
  Object {
    "contentType": "event",
    "fields": Object {
      "accessibilityDetails": "accessibilityDetails",
      "accessibilityOptions": Array [
        "O84a35poabxKTJm2d5",
      ],
      "addressLine1": "addressLine1",
      "addressLine2": "addressLine2",
      "audience": Array [
        "p7m",
        "75ckc33EMZTM3",
      ],
      "city": "city",
      "email": "email",
      "endTime": "2018-07-07T03:00+00:00",
      "eventCategories": Array [
        "Nightlife",
        "Social and Networking",
        "Community",
        "Health",
        "Sports and Activities",
      ],
      "eventDescription": "eventDescription",
      "eventPriceHigh": 10,
      "eventPriceLow": 0,
      "eventsListPicture": Object {
        "sys": Object {
          "id": "1nW21Av63nW",
        },
      },
      "individualEventPicture": Object {
        "sys": Object {
          "id": "2TmaX296B5e",
        },
      },
      "location": Object {
        "lat": 0,
        "lon": 10,
      },
      "locationName": "locationName",
      "name": "name",
      "performances": Array [
        Object {
          "sys": Object {
            "id": "cow95kARTP95S5pLs7tm6KOkFH",
          },
        },
        Object {
          "sys": Object {
            "id": "Bfi4QOC31oT",
          },
        },
      ],
      "phone": "phone",
      "postcode": "postcode",
      "recurrenceDates": Array [
        "08/07/2018",
        "04/08/2018",
      ],
      "startTime": "2018-07-07T00:00+00:00",
      "ticketingUrl": "ticketingUrl",
      "venueDetails": Array [
        "6em2PtRZIhYQiRF44",
        "Z7Z7T6bfuo7qFFz4s3fVA1LYD3lnx",
        "XLrUX5MxwxR9qRvT8t4F3",
        "7LIDGAlkK3Xg",
        "jP6n64T086sxr3sTpxGPLO05J",
      ],
    },
    "id": "r22",
    "locale": "en-GB",
    "revision": 1,
  },
  Object {
    "contentType": "event",
    "fields": Object {
      "accessibilityDetails": "accessibilityDetails",
      "accessibilityOptions": Array [
        "O84a35poabxKTJm2d5",
      ],
      "addressLine1": "addressLine1",
      "addressLine2": "addressLine2",
      "audience": Array [
        "p7m",
        "75ckc33EMZTM3",
      ],
      "city": "city",
      "email": "email",
      "endTime": "2018-07-08T03:00+00:00",
      "eventCategories": Array [
        "Nightlife",
        "Social and Networking",
        "Community",
        "Health",
        "Sports and Activities",
      ],
      "eventDescription": "eventDescription",
      "eventPriceHigh": 10,
      "eventPriceLow": 0,
      "eventsListPicture": Object {
        "sys": Object {
          "id": "1nW21Av63nW",
        },
      },
      "individualEventPicture": Object {
        "sys": Object {
          "id": "2TmaX296B5e",
        },
      },
      "location": Object {
        "lat": 0,
        "lon": 10,
      },
      "locationName": "locationName",
      "name": "name",
      "performances": Array [
        Object {
          "sys": Object {
            "id": "cow95kARTP95S5pLs7tm6KOkFH",
          },
        },
        Object {
          "sys": Object {
            "id": "Bfi4QOC31oT",
          },
        },
      ],
      "phone": "phone",
      "postcode": "postcode",
      "recurrenceDates": Array [
        "07/07/2018",
        "08/07/2018",
        "04/08/2018",
      ],
      "startTime": "2018-07-08T00:00+00:00",
      "ticketingUrl": "ticketingUrl",
      "venueDetails": Array [
        "6em2PtRZIhYQiRF44",
        "Z7Z7T6bfuo7qFFz4s3fVA1LYD3lnx",
        "XLrUX5MxwxR9qRvT8t4F3",
        "7LIDGAlkK3Xg",
        "jP6n64T086sxr3sTpxGPLO05J",
      ],
    },
    "id": "r22-recurrence-08/07/2018",
    "locale": "en-GB",
    "revision": 1,
  },
  Object {
    "contentType": "event",
    "fields": Object {
      "accessibilityDetails": "accessibilityDetails",
      "accessibilityOptions": Array [
        "O84a35poabxKTJm2d5",
      ],
      "addressLine1": "addressLine1",
      "addressLine2": "addressLine2",
      "audience": Array [
        "p7m",
        "75ckc33EMZTM3",
      ],
      "city": "city",
      "email": "email",
      "endTime": "2018-08-04T03:00+00:00",
      "eventCategories": Array [
        "Nightlife",
        "Social and Networking",
        "Community",
        "Health",
        "Sports and Activities",
      ],
      "eventDescription": "eventDescription",
      "eventPriceHigh": 10,
      "eventPriceLow": 0,
      "eventsListPicture": Object {
        "sys": Object {
          "id": "1nW21Av63nW",
        },
      },
      "individualEventPicture": Object {
        "sys": Object {
          "id": "2TmaX296B5e",
        },
      },
      "location": Object {
        "lat": 0,
        "lon": 10,
      },
      "locationName": "locationName",
      "name": "name",
      "performances": Array [
        Object {
          "sys": Object {
            "id": "cow95kARTP95S5pLs7tm6KOkFH",
          },
        },
        Object {
          "sys": Object {
            "id": "Bfi4QOC31oT",
          },
        },
      ],
      "phone": "phone",
      "postcode": "postcode",
      "recurrenceDates": Array [
        "07/07/2018",
        "08/07/2018",
        "04/08/2018",
      ],
      "startTime": "2018-08-04T00:00+00:00",
      "ticketingUrl": "ticketingUrl",
      "venueDetails": Array [
        "6em2PtRZIhYQiRF44",
        "Z7Z7T6bfuo7qFFz4s3fVA1LYD3lnx",
        "XLrUX5MxwxR9qRvT8t4F3",
        "7LIDGAlkK3Xg",
        "jP6n64T086sxr3sTpxGPLO05J",
      ],
    },
    "id": "r22-recurrence-04/08/2018",
    "locale": "en-GB",
    "revision": 1,
  },
]
`;

exports[`Events reducer RECEIVE_CMS_DATA action expands recurring events 1`] = `
Array [
  Object {
    "contentType": "event",
    "fields": Object {
      "accessibilityDetails": "accessibilityDetails",
      "accessibilityOptions": Array [
        "FM6jre",
        "b8Y2Ioy1qEC",
        "0D98Lcd5il86y1sf4685Ba3s3RbTi4",
      ],
      "addressLine1": "addressLine1",
      "addressLine2": "addressLine2",
      "audience": Array [
        "X2T77u30HfGQ978Ce",
        "IsJqxf058AxsLcfAP7451huX7",
        "",
      ],
      "city": "city",
      "email": "email",
      "endTime": "2018-08-02T03:00+00:00",
      "eventCategories": Array [
        "Exhibition and Tours",
        "Community",
      ],
      "eventDescription": "eventDescription",
      "eventPriceHigh": 10,
      "eventPriceLow": 0,
      "eventsListPicture": Object {
        "sys": Object {
          "id": "spcxVKZ8i3797",
        },
      },
      "individualEventPicture": Object {
        "sys": Object {
          "id": "l7g",
        },
      },
      "location": Object {
        "lat": 0,
        "lon": 10,
      },
      "locationName": "locationName",
      "name": "name",
      "performances": Array [
        Object {
          "sys": Object {
            "id": "Bsqmx0ly0Fqqd477NXLD4",
          },
        },
        Object {
          "sys": Object {
            "id": "Gf6o218t6c",
          },
        },
        Object {
          "sys": Object {
            "id": "b91L9M20RL6Qz9BUbdB9",
          },
        },
        Object {
          "sys": Object {
            "id": "aMa7e9k4CwRc33C8Bu8h5AO2p8xJE",
          },
        },
      ],
      "phone": "phone",
      "postcode": "postcode",
      "recurrenceDates": Array [
        "03/08/2018",
        "04/08/2018",
      ],
      "startTime": "2018-08-02T00:00+00:00",
      "ticketingUrl": "ticketingUrl",
      "venueDetails": Array [
        "TBIuOS1mRo7nM",
        "BKX3JLP68i0k2e",
      ],
    },
    "id": "l503MHwD",
    "locale": "en-GB",
    "revision": 1,
  },
  Object {
    "contentType": "event",
    "fields": Object {
      "accessibilityDetails": "accessibilityDetails",
      "accessibilityOptions": Array [
        "FM6jre",
        "b8Y2Ioy1qEC",
        "0D98Lcd5il86y1sf4685Ba3s3RbTi4",
      ],
      "addressLine1": "addressLine1",
      "addressLine2": "addressLine2",
      "audience": Array [
        "X2T77u30HfGQ978Ce",
        "IsJqxf058AxsLcfAP7451huX7",
        "",
      ],
      "city": "city",
      "email": "email",
      "endTime": "2018-08-03T03:00+00:00",
      "eventCategories": Array [
        "Exhibition and Tours",
        "Community",
      ],
      "eventDescription": "eventDescription",
      "eventPriceHigh": 10,
      "eventPriceLow": 0,
      "eventsListPicture": Object {
        "sys": Object {
          "id": "spcxVKZ8i3797",
        },
      },
      "individualEventPicture": Object {
        "sys": Object {
          "id": "l7g",
        },
      },
      "location": Object {
        "lat": 0,
        "lon": 10,
      },
      "locationName": "locationName",
      "name": "name",
      "performances": Array [
        Object {
          "sys": Object {
            "id": "Bsqmx0ly0Fqqd477NXLD4",
          },
        },
        Object {
          "sys": Object {
            "id": "Gf6o218t6c",
          },
        },
        Object {
          "sys": Object {
            "id": "b91L9M20RL6Qz9BUbdB9",
          },
        },
        Object {
          "sys": Object {
            "id": "aMa7e9k4CwRc33C8Bu8h5AO2p8xJE",
          },
        },
      ],
      "phone": "phone",
      "postcode": "postcode",
      "recurrenceDates": Array [
        "02/08/2018",
        "03/08/2018",
        "04/08/2018",
      ],
      "startTime": "2018-08-03T00:00+00:00",
      "ticketingUrl": "ticketingUrl",
      "venueDetails": Array [
        "TBIuOS1mRo7nM",
        "BKX3JLP68i0k2e",
      ],
    },
    "id": "l503MHwD-recurrence-03/08/2018",
    "locale": "en-GB",
    "revision": 1,
  },
  Object {
    "contentType": "event",
    "fields": Object {
      "accessibilityDetails": "accessibilityDetails",
      "accessibilityOptions": Array [
        "FM6jre",
        "b8Y2Ioy1qEC",
        "0D98Lcd5il86y1sf4685Ba3s3RbTi4",
      ],
      "addressLine1": "addressLine1",
      "addressLine2": "addressLine2",
      "audience": Array [
        "X2T77u30HfGQ978Ce",
        "IsJqxf058AxsLcfAP7451huX7",
        "",
      ],
      "city": "city",
      "email": "email",
      "endTime": "2018-08-04T03:00+00:00",
      "eventCategories": Array [
        "Exhibition and Tours",
        "Community",
      ],
      "eventDescription": "eventDescription",
      "eventPriceHigh": 10,
      "eventPriceLow": 0,
      "eventsListPicture": Object {
        "sys": Object {
          "id": "spcxVKZ8i3797",
        },
      },
      "individualEventPicture": Object {
        "sys": Object {
          "id": "l7g",
        },
      },
      "location": Object {
        "lat": 0,
        "lon": 10,
      },
      "locationName": "locationName",
      "name": "name",
      "performances": Array [
        Object {
          "sys": Object {
            "id": "Bsqmx0ly0Fqqd477NXLD4",
          },
        },
        Object {
          "sys": Object {
            "id": "Gf6o218t6c",
          },
        },
        Object {
          "sys": Object {
            "id": "b91L9M20RL6Qz9BUbdB9",
          },
        },
        Object {
          "sys": Object {
            "id": "aMa7e9k4CwRc33C8Bu8h5AO2p8xJE",
          },
        },
      ],
      "phone": "phone",
      "postcode": "postcode",
      "recurrenceDates": Array [
        "02/08/2018",
        "03/08/2018",
        "04/08/2018",
      ],
      "startTime": "2018-08-04T00:00+00:00",
      "ticketingUrl": "ticketingUrl",
      "venueDetails": Array [
        "TBIuOS1mRo7nM",
        "BKX3JLP68i0k2e",
      ],
    },
    "id": "l503MHwD-recurrence-04/08/2018",
    "locale": "en-GB",
    "revision": 1,
  },
]
`;

exports[`Events reducer initialises with default state 1`] = `
Object {
  "events": Array [],
  "featuredEvents": Array [],
  "headerBanners": Array [],
  "images": Object {},
  "loading": true,
  "performances": Object {},
  "refreshing": false,
  "sponsors": Array [],
}
`;
